fix(accommodation): add accommodation facility
- add route to handle creating a new accommodation facility
- add logic to handle creating a new accommodation facility
- add input validations
- write unit and integration tests
- document the newly created functionality

[Finishes #169817570]
