# src/swagger/swagger.json
@@ -33,6 +33,10 @@
     {
       "name": "Trip",
       "description": "Everything about trips"
+    },
+    {
+      "name": "Accommodation Facility",
+      "description": "Everything about accommodation"
     }
   ],
   "paths": {
@@ -314,6 +318,34 @@
           "Trip"
         ]
       }
+    },
+    "/accommodation/create": {
+      "post": {
+        "description": "Create accommodation facility",
+        "consumes": ["application/json"],
+        "parameters": [
+          {
+            "$ref": "#/parameters/accommodation"
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "created"
+          },
+          "401": {
+            "description": "unauthorised"
+          },
+          "422": {
+            "description": "unprocessable entity"
+          },
+          "500": {
+            "description": "internal server error"
+          }
+        },
+        "tags": [
+          "Accommodation Facility"
+        ]
+      }
     }
   },
   "parameters": {
@@ -585,6 +617,50 @@
           "returnDate": "2020-01-06",
           "travelReason": "Business oriented",
           "accommodationId": "Acadia suits"
+        }
+      }
+    },
+    "accommodation": {
+      "in": "body",
+      "name": "Create accommodation facility",
+      "description": "Supplier can add an accommodation facility",
+      "schema": {
+        "type": "object",
+        "required": [
+          "facilityName",
+          "locationId",
+          "numberOfRooms",
+          "description",
+          "address"
+        ],
+        "properties": {
+          "facilityName": {
+            "type": "string",
+            "default": false
+          },
+          "locationId": {
+            "type": "integer",
+            "default": false
+          },
+          "numberOfRooms": {
+            "type": "integer",
+            "default": false
+          },
+          "description": {
+            "type": "string",
+            "default": false
+          },
+          "address": {
+            "type": "string",
+            "default": false
+          }
+        },
+        "example": {
+          "facilityName": "Acadia suites",
+          "locationId": 10,
+          "numberOfRooms": 50,
+          "description": "Heaven away from heaven",
+          "address": "Plot 103, Kira road"
         }
       }
     }
